--- a/404.md
+++ b/404.md
@@ -1,6 +1,10 @@
 ---
+page-title: Not found
+title: "Page not found"
+id: 404
 permalink: /404.html
-title: "404: Page not found"
 ---
-
-#404: Page not found
+## `404 not found`
+---
+{:.center}
+![404_not_found](/img/404_not_found.jpg)
