--- a/404.md
+++ b/404.md
@@ -4,7 +4,6 @@ title: "Page not found"
 id: 404
 permalink: /404.html
 ---
-## `404 not found`
+# `404 not found`
 ---
-{:.center}
-![404_not_found](/img/404_not_found.jpg)
+{:.center}![404_not_found](/img/404_not_found.jpg)
