--- a/404.md
+++ b/404.md
@@ -6,4 +6,5 @@ permalink: /404.html
 ---
 # `404 not found`
 ---
-![404_not_found](/img/404_not_found.jpg){:.center-block}
+{:.center-block}
+![404_not_found](/img/404_not_found.jpg)
