add 404_not_found доработал 6

--- a/404.md
+++ b/404.md
@@ -1,10 +1,9 @@
 ---
 page-title: Not found
-title: "Page not found"
+title: "PAGE NOT FOUND"
 id: 404
 permalink: /404.html
 ---
-# `404 not found`
+# `404, PAGE NOT FOUND`
 ---
-{:.center-block}
 ![404_not_found](/img/404_not_found.jpg)
